<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">校园一卡通</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">加载中......</string>
    
    <string name="test">测试</string>
    
    
    
    <string name="planet_prompt" >Choose a planet</string>
    <string name="downtag">下拉菜单</string>
    <string name="charge">充值</string>
    <string name="query">查询</string>
    <string name="cardnumber">卡号</string>
    <string name="namewarnig">支持给其他人充值</string>
    <string name="amountwarning">请输入1-500元的整数，每次最多充值500元。</string>
    <string name="nocardwarning">没有卡号，可以用学号或工号。</string>
    <string name="inputplaceholder">请输入数字</string>
    <string name="name">姓名</string>
    <string name="amount">充值金额</string>
    <string name="nextStep">下一步</string>
    <string name="sms">免费短信通知</string>
    <string name="mobile">输入手机号</string>
    
    
    
    
    
    
    <string name="school_label">学校：</string>
    <string name="card_label">卡号：</string>
    <string name="name_label">姓名：</string>
    <string name="amount_label">充值金额：</string>
    <string name="phone_label">手机号码：</string>
    <string name="sure_text">确定</string>
    
    
    
    <string name="succ_tag">succuss</string>
    <string name="charge_succ_text">充值成功，请前往学校消费机或圈存机刷卡领取。</string>
    <string name="succ_notice">预计5分钟内到账。</string>

</resources>
