<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".IndexActivity" >

    
<Button 
    android:id="@+id/charge_button"
    android:contentDescription="@string/welcome"
    android:layout_height="40dp"
    android:layout_marginTop="20dp"
	android:layout_width="fill_parent"
	android:layout_alignParentTop="true"
	android:text="@string/charge"
	android:textColor="#CACACA"
	android:background="#FB8318"
    />
<Button 
    android:id="@+id/query_button"
    android:contentDescription="@string/welcome"
    android:layout_height="40dp"
    android:layout_marginTop="20dp"
	android:layout_width="fill_parent"
	android:layout_below="@id/charge_button"
	android:text="@string/query"
	android:textColor="#CACACA"
	android:background="#FB8318"
    />
</RelativeLayout>
